# developmental-patterns-child-speech

./: .gitignore  README.md  main.py  pyproject.toml
data/processed/: H1_spearman_v3.csv  SVD_A_normed_v2_from_rrl.npy  SVD_A_normed_v2_with_rrl.npy  master_features.csv  master_features_with_rrl.csv  pipeline_rrl.csv
data/processed/Eng-NA/Brown/: Eve_extracted.parquet
data/raw/Eng-NA/Brown/: 0metadata.cdc
data/raw/Eng-NA/Brown/Adam/: 020304.cha  020318.cha  020403.cha  020415.cha  020430.cha  020512.cha  020603.cha  020617.cha  020701.cha  020714.cha  020801.cha  020816.cha  020904.cha  020918.cha  021002.cha  021016.cha  021030.cha  021113.cha  021128.cha  030011.cha  030025.cha  030109.cha  030126.cha  030209.cha  030221.cha  030304.cha  030318.cha  030401.cha  030418.cha  030501.cha  030515.cha  030529.cha  030609.cha  030707.cha  030801.cha  030814.cha  030826.cha  030916.cha  031015.cha  031101.cha  (+15 more)
data/raw/Eng-NA/Brown/Eve/: 010600a.cha  010600b.cha  010700a.cha  010700b.cha  010800.cha  010900a.cha  010900b.cha  010900c.cha  011000a.cha  011000b.cha  011100a.cha  011100b.cha  020000a.cha  020000b.cha  020100a.cha  020100b.cha  020200a.cha  020200b.cha  (+2 more)
notebooks/: 01_data_collection.ipynb  01_data_collection_updated.ipynb  02_preprocessing.ipynb  02b_preprocessing_parquet.ipynb  03_feature_engineering.ipynb  03b_feature_engineering_v2.ipynb  03c_feature_engineering_rrl.ipynb  04_analysis.ipynb  04b_analysis.ipynb  04c_analysis_rrl.ipynb  05_visualizations.ipynb  06_latent_feature_engineering.ipynb  06b_latent_feature_eng_temp.ipynb  XX_rrl_baselines.ipynb
(+139 files in other folders)
