[project]
name = "developmental-patterns-child-speech"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "gensim>=4.4.0",
    "jupyter>=1.1.1",
    "lexical-diversity>=0.1.1",
    "matplotlib>=3.10.8",
    "nltk>=3.9.3",
    "notebook>=7.5.4",
    "numpy>=2.4.2",
    "pandas>=3.0.1",
    "pylangacq>=0.20.0",
    "scikit-learn>=1.8.0",
    "seaborn>=0.13.2",
    "spacy>=3.8.11",
    "statsmodels>=0.14.6",
    "wordcloud>=1.9.6",
]
